# docs/swagger.yaml
@@ -9,6 +9,8 @@ definitions:
         type: string
       password:
         type: string
+      profilePicture:
+        type: string
     type: object
   authentication.FirstAccessRequest:
     properties:
@@ -123,6 +125,13 @@ definitions:
         type: string
       questionID:
         type: string
+    type: object
+  httpmodels.AddAnswersBatchRequest:
+    properties:
+      answers:
+        items:
+          $ref: '#/definitions/httpmodels.AddAnswerRequest'
+        type: array
     type: object
   httpmodels.AnswerRequest:
     properties:
@@ -941,6 +950,30 @@ paths:
       - Bearer: []
       - Language: []
       summary: Add answer to question
+      tags:
+      - Course
+  /courses/{id}/questions/batch:
+    post:
+      parameters:
+      - description: Request payload for adding answers
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/httpmodels.AddAnswersBatchRequest'
+      responses:
+        "204":
+          description: No content
+        "409":
+          description: Conflict
+        default:
+          description: Standard error example object
+          schema:
+            $ref: '#/definitions/components.Response'
+      security:
+      - Bearer: []
+      - Language: []
+      summary: Add answers to questions
       tags:
       - Course
   /courses/{id}/reviews:
